--- a/templates/login.html
+++ b/templates/login.html
@@ -89,7 +89,7 @@
                         <h2 class="card-title text-center mb-4 animate__animated animate__bounceIn">登入</h2>
                         <form method="POST">
                             <div class="mb-3">
-                                <label for="username" class="form-label">用戶名</label>
+                                <label for="username" class="form-label">工號</label>
                                 <input type="text" class="form-control" id="username" name="username" required>
                             </div>
                             <div class="mb-3">
